# rocqsweeper

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  dune  dune-project  rocqsweeper.opam
.github/workflows/: ci.yml
docs/: index.data  index.html  index.js  index.wasm
src/: main.cpp  sdl_helpers.h  web_main.cpp  web_shell.html
theories/: GameProofs.v  InteractionProofs.v  Rocqsweeper.v  SDL.v  SDLDefs.v  dune
